test/type_inference/negative/unused_typevar1.impala
fn f[A](g: fn(A) -> A) -> int32 {
    4
}

fn main() -> () {
    f(|x| x);
}
